bin/tests/snapshots/shell_idiom__65e22b8755cb603ebde5a4c8f3ead557_fix.snap
---
source: bin/tests/shell_idiom.rs
---
{ systemd.services.x.preStart = ''
  cp ${cfg.package}/bin/helper /run/x/helper
  chgrp x /run/x/helper
  chmod 750 /run/x/helper
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,3 @@
 { systemd.services.x.preStart = ''
-  cp ${cfg.package}/bin/helper /run/x/helper
-  chgrp x /run/x/helper
-  chmod 750 /run/x/helper
+  install -m 750 -g x ${cfg.package}/bin/helper /run/x/helper
 ''; }
