bin/tests/snapshots/shell_idiom__65e22b8755cb603ebde5a4c8f3ead557_lint_errfmt.snap
---
source: bin/tests/shell_idiom.rs
---
{ systemd.services.x.preStart = ''
  cp ${cfg.package}/bin/helper /run/x/helper
  chgrp x /run/x/helper
  chmod 750 /run/x/helper
''; }
---
<temp_file_path>>2:3:I:33:[shell_idiom] `cp` + `chgrp` + `chmod` can be one `install`
