bin/tests/snapshots/shell_idiom__65e22b8755cb603ebde5a4c8f3ead557_lint_json.snap
---
source: bin/tests/shell_idiom.rs
---
{ systemd.services.x.preStart = ''
  cp ${cfg.package}/bin/helper /run/x/helper
  chgrp x /run/x/helper
  chmod 750 /run/x/helper
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shell_idiom",
      "note": "Shell commands with a shorter idiom",
      "code": 33,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 4,
              "column": 26
            }
          },
          "message": "`cp` + `chgrp` + `chmod` can be one `install`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `install -m 750 -g x ${cfg.package}/bin/helper /run/x/helper`."
        }
      ]
    }
  ]
}
