bin/tests/snapshots/shell_idiom__65e22b8755cb603ebde5a4c8f3ead557_lint_stderr.snap
---
source: bin/tests/shell_idiom.rs
---
{ systemd.services.x.preStart = ''
  cp ${cfg.package}/bin/helper /run/x/helper
  chgrp x /run/x/helper
  chmod 750 /run/x/helper
''; }
---
[shell_idiom] Advice: Shell commands with a shorter idiom
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │ ╭─▶   cp ${cfg.package}/bin/helper /run/x/helper
   ┆ ┆   
 4 │ ├─▶   chmod 750 /run/x/helper
   │ │                               
   │ ╰─────────────────────────────── cp + chgrp + chmod can be one install
───╯
