bin/tests/snapshots/shell_idiom__75037a46b3a727cb0e2d04573f85af49_lint_json.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  cat $files | sort > all
  n=$(grep pat lib/*.php | wc -l)
  sort -k2 x | uniq
  mkdir -p $out/a
  mkdir -p $out/b
  v=$(cat "$f")
  sed -i 's,#!/usr/bin/env bash,#!${stdenv.shell},' x
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shellcheck",
      "note": "ShellCheck found issues in an inline shell script",
      "code": 28,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 7
            },
            "to": {
              "line": 2,
              "column": 13
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 38
              },
              "to": {
                "line": 9,
                "column": 3
              }
            },
            "fix": "''\n  cat \"$files\" | sort > all\n  n=$(grep pat lib/*.php | wc -l)\n  sort -k2 x | uniq\n  mkdir -p \"$out\"/a\n  mkdir -p \"$out\"/b\n  v=$(cat \"$f\")\n  sed -i 's,#!/usr/bin/env bash,#!${stdenv.shell},' x\n''"
          },
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 3,
              "column": 7
            },
            "to": {
              "line": 3,
              "column": 25
            }
          },
          "message": "SC2126: Consider using 'grep -c' instead of 'grep|wc -l'.",
          "suggestion": null,
          "fixable": false,
          "help": "See https://www.shellcheck.net/wiki/SC2126"
        },
        {
          "at": {
            "from": {
              "line": 5,
              "column": 12
            },
            "to": {
              "line": 5,
              "column": 16
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": null,
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 6,
              "column": 12
            },
            "to": {
              "line": 6,
              "column": 16
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": null,
          "fixable": true
        }
      ]
    },
    {
      "name": "shell_idiom",
      "note": "Shell commands with a shorter idiom",
      "code": 33,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 5,
              "column": 3
            },
            "to": {
              "line": 6,
              "column": 18
            }
          },
          "message": "`mkdir -p` takes several directories: `mkdir -p $out/a $out/b`",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 38
              },
              "to": {
                "line": 9,
                "column": 3
              }
            },
            "fix": "''\n  cat $files | sort > all\n  n=$(grep pat lib/*.php | wc -l)\n  sort -k2 x | uniq\n  mkdir -p $out/a $out/b\n  v=$(<\"$f\")\n  sed -i 's,#!/usr/bin/env bash,#!${stdenv.shell},' x\n''"
          },
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 7,
              "column": 7
            },
            "to": {
              "line": 7,
              "column": 15
            }
          },
          "message": "`$(cat file)`: bash reads it without `cat` as `$(<file)`",
          "suggestion": null,
          "fixable": true
        }
      ]
    },
    {
      "name": "shell_idiom",
      "note": "Shell commands with a shorter idiom",
      "code": 33,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 2,
              "column": 26
            }
          },
          "message": "`cat` only feeds `sort`: read the file directly",
          "suggestion": null,
          "fixable": false,
          "help": "Use `sort > all < $files`."
        },
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 2,
              "column": 3
            }
          },
          "message": "The phase doesn't run `runHook preInstall`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `runHook preInstall`. Overriding a phase skips its hooks unless it runs them: `preInstall`/`postInstall` from the derivation and from setup hooks. Leave them out only on purpose."
        },
        {
          "at": {
            "from": {
              "line": 8,
              "column": 54
            },
            "to": {
              "line": 8,
              "column": 54
            }
          },
          "message": "The phase doesn't run `runHook postInstall`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `runHook postInstall`. Overriding a phase skips its hooks unless it runs them: `preInstall`/`postInstall` from the derivation and from setup hooks. Leave them out only on purpose."
        }
      ]
    }
  ]
}
