bin/tests/snapshots/shell_idiom__7ad22e370ab70d86ac185e2d6c622af0_fix.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/share/doc
  cp README.md NEWS $out/share/doc
''; }
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,4 @@
 stdenv.mkDerivation { installPhase = ''
-  mkdir -p $out/share/doc
-  cp README.md NEWS $out/share/doc
+  mkdir -p "$out"/share/doc
+  cp README.md NEWS "$out"/share/doc
 ''; }
