bin/tests/snapshots/shell_idiom__7ad22e370ab70d86ac185e2d6c622af0_lint_json.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/share/doc
  cp README.md NEWS $out/share/doc
''; }
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "shellcheck",
      "note": "ShellCheck found issues in an inline shell script",
      "code": 28,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 12
            },
            "to": {
              "line": 2,
              "column": 16
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 38
              },
              "to": {
                "line": 4,
                "column": 3
              }
            },
            "fix": "''\n  mkdir -p \"$out\"/share/doc\n  cp README.md NEWS \"$out\"/share/doc\n''"
          },
          "fixable": true
        },
        {
          "at": {
            "from": {
              "line": 3,
              "column": 21
            },
            "to": {
              "line": 3,
              "column": 25
            }
          },
          "message": "SC2086: Double quote to prevent globbing and word splitting.",
          "suggestion": null,
          "fixable": true
        }
      ]
    },
    {
      "name": "shell_idiom",
      "note": "Shell commands with a shorter idiom",
      "code": 33,
      "severity": "Hint",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 2,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 35
            }
          },
          "message": "`mkdir -p` + `cp` can be one `install`",
          "suggestion": null,
          "fixable": false,
          "help": "Use `install -D -t $out/share/doc README.md NEWS`. `install` sets mode 755 unless given `-m`, where `cp` keeps the source's mode: add `-m 644` for data files."
        }
      ]
    }
  ]
}
