bin/tests/snapshots/shell_idiom__7ad22e370ab70d86ac185e2d6c622af0_lint_stderr.snap
---
source: bin/tests/shell_idiom.rs
---
stdenv.mkDerivation { installPhase = ''
  mkdir -p $out/share/doc
  cp README.md NEWS $out/share/doc
''; }
---
[shellcheck] Advice: ShellCheck found issues in an inline shell script
   ╭─[ <temp_file_path>:2:12 ]
   │
 2 │   mkdir -p $out/share/doc
   │            ──┬─  
   │              ╰─── SC2086: Double quote to prevent globbing and word splitting.
 3 │   cp README.md NEWS $out/share/doc
   │                     ──┬─  
   │                       ╰─── SC2086: Double quote to prevent globbing and word splitting.
───╯
[shell_idiom] Advice: Shell commands with a shorter idiom
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │ ╭─▶   mkdir -p $out/share/doc
 3 │ ├─▶   cp README.md NEWS $out/share/doc
   │ │                                        
   │ ╰──────────────────────────────────────── mkdir -p + cp can be one install
   │
   ├─[ <temp_file_path>:2:3 ]
   │
 2 │   mkdir -p $out/share/doc
   │   │ 
   │   ╰─ The phase doesn't run runHook preInstall
 3 │   cp README.md NEWS $out/share/doc
   │                                   │ 
   │                                   ╰─ The phase doesn't run runHook postInstall
───╯
